--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script type="text/javascript" src="./ctrl/room.ctrl.js"></script>
     <script type="text/javascript" src="./ctrl/user.ctrl.js"></script>
     <script type="text/javascript" src="./ctrl/profile.ctrl.js"></script>
+    <script type="text/javascript" src="./ctrl/report.ctrl.js"></script>
 
     <!--Include angular services //-->
     <script type="text/javascript" src="./services/user.service.js"></script>
